# go-commons-toolkit

./: .env.example  .gitignore  Makefile  README.md  USAGE.md  go.mod  go.sum
docs/: executive-summary.md  index.md
docs/architecture/: catalog-structure.md  data-model.md  systentando-one-architecture.md
docs/business/: revenue-model.md  valuation-model.md
docs/gamification/: gamification-implementation.md  gamification-system.md
docs/marketing/: marketing-strategy.md
go/: LICENSE  Makefile  README.md  docker-compose.yml  go.mod
go/test/: README.md  kafka_test.go  mongodb_test.go  supabase_postgres_test.go  validation_test.go
nodejs/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
nodejs/examples/: basic-service.ts
nodejs/src/: index.ts
python/ecommerce-agente-autonomo/: .gitignore  LLMs.md  docker-compose.yml  requirements.txt  run.py  setup.py
python/machinelearning-analysis-service/: .gitignore  Dockerfile  GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
python/machinelearning-analysis-service/examples/: __init__.py  register_all_examples.py
python/machinelearning-analysis-service/examples/food_analysis/: README.md  __init__.py  api_client_example.py  download_models.py  example_nutrition_analysis.ipynb  example_nutrition_analysis.py  food_nutrition_model.py
python/machinelearning-analysis-service/examples/food_analysis/resources/: condition_classes.json  food_classes.json  food_nutrition_db.json
python/machinelearning-analysis-service/examples/food_analysis/tests/: test_food_nutrition_model.py
python/machinelearning-analysis-service/scripts/: benchmark.py  create_custom_model.py  download_models.py
python/machinelearning-analysis-service/src/: __init__.py  main.py  setup.py
python/machinelearning-analysis-service/src/api/: __init__.py
python/machinelearning-analysis-service/src/api/middleware/: __init__.py  logging_middleware.py  metrics_middleware.py
python/machinelearning-analysis-service/src/api/routes/: __init__.py  analyze.py  background_tasks.py  models.py
python/machinelearning-analysis-service/src/config/: __init__.py  logging.yaml  settings.py
python/machinelearning-analysis-service/src/core/: __init__.py  context.py  protocols.py  registry.py
python/machinelearning-analysis-service/src/exporters/: __init__.py  csv_exporter.py  exporter_base.py  json_exporter.py  nutrition_exporter.py
python/machinelearning-analysis-service/src/models/: __init__.py  base.py
python/machinelearning-analysis-service/src/models/food/: __init__.py  detection_model.py  nutrition_service.py  protocols.py
python/machinelearning-analysis-service/src/models/generic/: __init__.py  generic_model.py
python/machinelearning-analysis-service/src/models/generic/post_processors/: __init__.py  classification_postprocessor.py  detection_postprocessor.py  segmentation_postprocessor.py  video_postprocessor.py
python/machinelearning-analysis-service/src/models/generic/processors/: __init__.py  image_processor.py  video_processor.py
python/machinelearning-analysis-service/src/schemas/: __init__.py  food_analysis.py  requests.py  responses.py
python/machinelearning-analysis-service/src/utils/: __init__.py  logging.py  metrics.py  storage.py
python/machinelearning-analysis-service/tests/: conftest.py  test_api.py  test_generic_model.py  test_registry.py
python/vendedor-ecommerce-agente/: .env.example  Dockerfile  README.md  main.py
rust/: Cargo.toml  README.md  USAGE.md
rust/src/: lib.rs
rust/src/cli/: mod.rs
rust/src/cli/project_templates/: config.rs  config_file.rs  dockerfile.rs  error.rs  health_handler.rs  mod.rs
rust/src/config/: mod.rs
rust/src/error/: mod.rs
shared/scripts/: init-toolkit.sh
shared/security/: auth.go  jwt.go
shared/tools/: db_migrator.go  project_generator.go  schema_generator.go
shared/utils/: dates.go  errors.go  (+1 more)
test/: .env.example  README.md  jwt_test.go  kafka_test.go  mongodb_test.go  supabase_postgres_test.go  validation_test.go
(+89 files in other folders)
