[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[project]
name = "machinelearning-analysis-service"
version = "0.1.0"
description = "Serviço modular para análise de imagens e vídeos usando TensorFlow"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fastapi>=0.75.0",
    "uvicorn>=0.17.6",
    "pydantic>=1.9.0",
    "tensorflow>=2.8.0",
    "numpy>=1.22.0",
    "python-multipart>=0.0.5",
    "aiofiles>=0.8.0",
    "pandas>=1.4.2",
    "python-json-logger>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.18.3",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.950",
]
gpu = [
    "tensorflow-gpu>=2.8.0",
]
onnx = [
    "onnxruntime>=1.11.0",
]
pytorch = [
    "torch>=1.11.0",
    "torchvision>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/sua-organizacao/machinelearning-analysis-service"
"Bug Tracker" = "https://github.com/sua-organizacao/machinelearning-analysis-service/issues"
